--- a/cyclope/templates/cyclope/base_content_confirm_delete.html
+++ b/cyclope/templates/cyclope/base_content_confirm_delete.html
@@ -10,7 +10,7 @@
 <form method="post" action="." class="uniForm">
 {% csrf_token %}
 <div class="buttonHolder">
-  <input type="submit"  value={% trans "Delete" %} class="secondaryAction" >
+  <input type="submit"  value={% trans "Delete" %} class="btn btn-primary" id="submit-id-submit">
 </div>
 </form>
 {% endblock %}
