--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/main.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/main.html
@@ -1,14 +1,14 @@
 {% extends CYCLOPE_THEME_BASE_TEMPLATE %}
-{% load layout %}
+{% load i18n layout %}
 {% block body_class %}main{% endblock %}
 
 {% block page_content %}
 {# <div class="row">{% region 'left' %}</div> #}
-    <div class="col-xs-12 col-sm-9">
+    <div class="col-xs-12 col-sm-9"> 
         <div class="row">{% region 'top' %}</div>
          <!-- toogle nav for different devices and resolutions -->
-        <p class="pull-right visible-xs"><button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button></p> <!-- end toogle nav -->
-        <div class="jumbotron">{% block content %}{% endblock %}</div>
+        <p class="pull-right visible-xs"><button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">{% trans "Toggle nav" %}</button></p> <!-- end toogle nav -->
+        {% block content %}{% endblock %}
         <div class="row">{% region 'bottom' %}</div>
     </div>
     <div class="row">{% region 'right'%}</div>
