--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -1,18 +1,23 @@
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils fb_versions dbgettext_tags %}
 
 {% block content %}
-<div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% inline_content_classes %}">
+<div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
 
+    <div class="pretitle-container first meta-content">
+      <div class="date">
+        {{ current_object.creation_date|date:'SHORT_DATE_FORMAT' }}
+      </div>
+    </div>
  
   <h2 class="title">
 		{% if CYCLOPE_THEME_TYPE == 'classic' %}<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" alt="icon" />{% endif %}
 
-		<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
+		<a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>{{ current_object.name }}</a>
   </h2>
 
   {% if current_object.image %}
       <div class="teaser_icon_container media-content">
-      <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %} {{ current_object.get_absolute_url }} {% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
+      <a href="{% if current_object.skip_detail %}{{ current_object.content_url }}{% else %}{{ current_object.get_absolute_url }}{% endif%}" {% if current_object.new_window %}target="_blank"{% endif%}>
         <img class="teaser_icon img-responsive" src="{% version current_object.image.path 'small' %}" border="0"/>
       </a>
     </div>
