--- a/cyclope/core/collections/templates/collections/category_carousel.html
+++ b/cyclope/core/collections/templates/collections/category_carousel.html
@@ -7,7 +7,8 @@
 {% block extra_head %}
 {% endblock %}
 
-{% block content %}
+
+{% block content %}<div class="jumbotron">
 <div id="carousel-{% if region_name %}-{{region_name}}{% endif %}-{{category_slug}}" class="carousel slide" {% if view_options.auto_play %}data-ride="carousel"{% endif %}>
 
   {% with categorizations|first as first_categorization %}
@@ -47,5 +48,6 @@
     <span class="sr-only">{% trans "Next" %}</span>
   </a>
 
-</div>
+</div></div>
 {% endblock %}
+
