--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -1,7 +1,7 @@
 {% load i18n cyclope_utils fb_versions dbgettext_tags %}
 
 {% block content %}
-<div class="content-view {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
+<div class="content-view media {{ current_object.get_object_name }} teaser {{ current_object.get_object_name }}-teaser {% if region_name %}{% inline_content_classes %}{% endif%}">
 
     <div class="pretitle-container first meta-content">
       <div class="date">
