--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/default.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/default.html
@@ -1,6 +1,6 @@
 {% extends CYCLOPE_THEME_BASE_TEMPLATE %}
 
-{% load layout%}
+{% load i18n layout%}
 {% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}
 {% block body_class %}default{% endblock %}
 
@@ -11,7 +11,7 @@
     <div class="col-xs-12 col-sm-9">
         <div class="row">{% region 'top' %}</div>
          <!-- toogle nav for different devices and resolutions -->
-        <div class= "toggle-botton-nav"><p class="pull-right visible-xs"><button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">{% trans "Toggle nav" %}</button></p></div> <!-- end toogle nav -->
+        <div class= "toggle-botton-nav"><p class="pull-right visible-xs"><button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"> <span class="glyphicon glyphicon-menu-left"></span> {% trans "Toggle nav" %}</button></p></div> <!-- end toogle nav -->
         <div class="row">{% block content %}{% endblock %}</div>
         <div class="row">{% region 'bottom' %}</div>
     </div>
