--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -1,5 +1,5 @@
 {% extends host_template %}
-{% load cyclope_utils fb_versions %}
+{% load i18n cyclope_utils fb_versions %}
 
 {% comment %}
 When inserted in a layout region the host template used is just a wrapper (see inline_view.html).
@@ -7,6 +7,14 @@ When showing the StaticPage as the main content of the view, the host_template i
 {% endcomment %}
 
 {% block content %}
+
+{% if not user.is_authenticated and not staticpage.published %}
+  <div class="alert alert-danger" role="alert">
+		<span class="glyphicon glyphicon-ban-circle"></span>
+			<a href="{% url auth_login %}?next={{ request.path }}">{% trans "This content isn't public, please log in" %}
+		</a>
+	</div>
+{% else %}
 
 <div class="content-view staticpage detail staticpage-detail html-content">
   
@@ -37,4 +45,5 @@ When showing the StaticPage as the main content of the view, the host_template i
 
 </div>
 
+{% endif %}
 {% endblock content%}
