--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -57,7 +57,9 @@
       {% alias categorization.content_object as categorization.content_type.model %}
       {% alias categorization.content_object as 'media' %}
       {% endspaceless %}
-      <li>{% include template_path with current_object=categorization.content_object %}</li>
+      {% if not user.is_authenticated and not media.published %}{% else %}
+				<li>{% include template_path with current_object=categorization.content_object %}</li>
+			{% endif %}
     {% endfor %}
     </ul>
     </div>
