--- a/cyclope/core/collections/templates/collections/category_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/category_teaser_list.html
@@ -18,7 +18,9 @@ The included template may be something different from a teaser
         {% alias categorization.content_object as categorization.content_type.model %}
         {% alias categorization.content_object as 'media' %}
         {% endspaceless %}
-        {% include template_path with current_object=categorization.content_object host_template="cyclope/inline_view.html" %}
+        {% if not user.is_authenticated and not media.published %}{% else %}
+					{% include template_path with current_object=categorization.content_object host_template="cyclope/inline_view.html" %}
+				{% endif %}				
     </div>
   {% endfor %}
 {% endblock %}
